--- a/app/src/main/res/layout/activity_videolist.xml
+++ b/app/src/main/res/layout/activity_videolist.xml
@@ -6,10 +6,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+
 
 
 </LinearLayout>
