--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+
+    <!-- 黄色 -->
+    <color name="yellow">#FFDC00</color>
+    <!-- 首级颜色 -->
+    <color name="text_first_color">#242629</color>
 </resources>
